--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ rastreador-tempo = "rastreador_tempo.main:app"
 [tool.poetry.dependencies]
 python = "^3.8"
 typer = "^0.4.0"
+pandas = "^1.3.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
