--- a/.gitignore
+++ b/.gitignore
@@ -143,4 +143,5 @@ dmypy.json
 cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/python
-report.csv
+database.csv
+report_*.csv
