--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "rastreador-tempo"
 version = "0.1.0"
-description = ""
-authors = ["rafaelmatsumoto <rafaelmatsumoto43@gmail.com>"]
+description = "Aplicativo de linha de comando para rastrear o tempo de trabalho"
+authors = ["rafaelmatsumoto <rafael.matsumoto43@catolicasc.edu.br>"]
 readme = "README.md"
 
 [tool.poetry.scripts]
